apps/comfyui/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: comfyui-external
  namespace: default
spec:
  ports:
    - port: 8188
      targetPort: 8188
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: comfyui-external-1
  namespace: default
  labels:
    kubernetes.io/service-name: comfyui-external
addressType: IPv4
endpoints:
  - addresses:
      - 10.100.20.19
    conditions:
      ready: true
ports:
  - name: ""
    port: 8188
    protocol: TCP
