apps/comfyui/ingress-amer-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comfyui-ingress-amer-dev
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: comfy.amer.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: infra-traefik
  tls:
    - hosts:
        - comfy.amer.dev
      secretName: comfy-amer-dev-tls
  rules:
    - host: comfy.amer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: comfyui-external
                port:
                  number: 8188
